--- a/index.html
+++ b/index.html
@@ -62,25 +62,53 @@
           <td>125</td>
          </tr>
          <tr bgcolor="#F0F8FF"> 
-             <td></td><td>2</td> <td>Egg Fried</td> <td>1</td> <td>110</td>
+             <td></td>
+             <td>2</td> 
+             <td>Egg Fried</td> 
+             <td>1</td> 
+             <td>110</td>
          </tr>
          <tr bgcolor="#F0F8FF">
-             <td></td> <td>3</td> <td>Egg omelette</td> <td>1</td> <td>120</td>
+             <td></td> 
+             <td align="right">3</td> 
+             <td>Egg omelette</td> 
+             <td>1</td> 
+             <td>120</td>
          </tr>
          <tr bgcolor="#FFDEAD">
-             <td></td> <td>4</td> <td>Breadslice with butter</td> <td>1</td> <td>90</td>
+             <td></td> 
+             <td>4</td> 
+             <td>Breadslice with butter</td> 
+             <td>1</td> 
+             <td>90</td>
          </tr>
          <tr bgcolor="#FFDEAD">
-             <td></td> <td>5</td> <td>Chapati</td> <td>1</td> <td>60</td>
+             <td></td>
+             <td>5</td> 
+             <td>Chapati</td> 
+             <td>1</td> 
+             <td>60</td>
          </tr>
          <tr bgcolor="#FFDEAD"">
-             <td></td> <td>6</td> <td>Puri</td> <td>1</td> <td>75</td>
+             <td></td> 
+             <td>6</td> 
+             <td>Puri</td> 
+             <td>1</td> 
+             <td>75</td>
          </tr>
          <tr bgcolor="#FFFFFF">
-             <td></td> <td>7</td> <td>Cooked rice-Plain</td> <td>1 Cup</td> <td>120</td>
+             <td></td> 
+             <td>7</td> 
+             <td>Cooked rice-Plain</td> 
+             <td>1 Cup</td> 
+             <td>120</td>
          </tr>
          <tr bgcolor="#FFFFFF">
-             <td></td> <td>8</td> <td>Cooked rice-Fried</td> <td>1 Cup</td> <td>150</td>
+             <td></td> 
+             <td>8</td> 
+             <td>Cooked rice-Fried</td> 
+             <td>1 Cup</td> 
+             <td>150</td>
          </tr>
 
         
