--- a/greencity/index.html
+++ b/greencity/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style_greencity/style.html">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Green City</title>
 </head>
 <body>
-    <tr bgcolor="grey"></tr>
+    <table>
+        <tr>
+            <td>
+                <tr><img src="img_greencity/logo.png"</tr>
+                <tr>Главная</tr>
+                <tr>Контакты</tr>
+                <tr>О нас</tr>
+                <tr>Волонтеры</tr>
+            </td>
+        </tr>
+    </table>
 </body>
 </html>
