--- a/greencity/index.html
+++ b/greencity/index.html
@@ -11,11 +11,21 @@
     <table>
         <tr>
             <td>
-                <tr><img src="img_greencity/logo.png"</tr>
-                <tr>Главная</tr>
-                <tr>Контакты</tr>
-                <tr>О нас</tr>
-                <tr>Волонтеры</tr>
+                <tr>
+                    <img src="img_greencity/logo.png">
+                </tr>
+                <tr>
+                    <a href="http://" target="_blank">Главная</a>
+                </tr>
+                <tr>
+                    <a href="#" target="_blank">Контакты</a>
+                </tr>
+                <tr>
+                    <a href="#" target="_blamk">О нас</a>
+                </tr>
+                <tr>
+                    <a href="#" target="_blank">Волонтеры</a>
+                </tr>
             </td>
         </tr>
     </table>
