--- a/greencity/index.html
+++ b/greencity/index.html
@@ -8,8 +8,7 @@
     <title>Green City</title>
 </head>
 <body>
-    <table>
-        <tr>
+    <table class="table-menu">
             <td>
                 <tr>
                     <img src="img_greencity/logo.png">
@@ -27,7 +26,6 @@
                     <a href="#" target="_blank">Волонтеры</a>
                 </tr>
             </td>
-        </tr>
     </table>
 </body>
 </html>
