--- a/greencity/index.html
+++ b/greencity/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <table class="table-menu">
+        <tbody>
             <tr>
                 <td>
                     <img src="img_greencity/logo.png">
@@ -26,6 +27,7 @@
                     <a href="#" target="_blank">Волонтеры</a>
                 </td>
             </tr>
+        </tbody>
     </table>
 </body>
 </html>
