--- a/greencity/style_greencity/style.html
+++ b/greencity/style_greencity/style.html
@@ -1,5 +1,3 @@
-.table-menu {
-    <background-color>
-       background-color gray
-    </background-color>
+.tablemenu {
+    background-color: Green
 }
