--- a/greencity/index.html
+++ b/greencity/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="style_greencity/style.html">
+    <link rel="stylesheet" href="stylegreencity/style.html">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +12,7 @@
         <tbody>
             <tr>
                 <td>
-                    <img src="img_greencity/logo.png">
+                    <img src="imggreencity/logo.png">
                 </td>
                 <td>
                     <a href="http://" target="_blank">Главная</a>
