--- a/greencity/index.html
+++ b/greencity/index.html
@@ -8,7 +8,7 @@
     <title>Green City</title>
 </head>
 <body>
-    <table class="tablemenu">
+    <table class="table-menu">
         <tbody>
             <tr>
                 <td>
