--- a/greencity/index.html
+++ b/greencity/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="stylegreencity/style.html">
+    <link rel="stylesheet" href="stylegreencity/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Green City</title>
+    <title>Green_City</title>
 </head>
 <body>
     <table class="table-menu">
