--- a/greencity/index.html
+++ b/greencity/index.html
@@ -9,7 +9,6 @@
 </head>
 <body>
     <table class="table-menu">
-        <tbody>
             <tr>
                 <td>
                     <img src="imggreencity/logo.png">
@@ -27,7 +26,9 @@
                     <a href="#" target="_blank">Волонтеры</a>
                 </td>
             </tr>
-        </tbody>
+            <tr>
+                <td>Стать волонтером проще чем кажется</td>
+            </tr>
     </table>
 </body>
 </html>
