--- a/greencity/index.html
+++ b/greencity/index.html
@@ -26,9 +26,24 @@
                     <a href="#" target="_blank">Волонтеры</a>
                 </td>
             </tr>
-            <tr>
-                <td>Стать волонтером проще чем кажется</td>
-            </tr>
+            <table>
+                <table class="start">
+                <tr>
+                    <td>
+                     <h1> Стать волонтером проще чем кажется</h1>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <h2>Приглашаем вас в наши дружные ряды!Мы рад найти единомышленников и поддержку!</h2>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <h3>Форум поможет ответить на все ваши вопросы, вы всегда будете в курсе всех событий из жизни организации. Это главный инструмент коммуникации волонтеров</h3>
+                    </td>
+                </tr> 
+            </table>
     </table>
 </body>
 </html>
