--- a/greencity/index.html
+++ b/greencity/index.html
@@ -17,13 +17,13 @@
                     <a href="http://" target="_blank">Главная</a>
                 </td>
                 <td>
-                    <a href="#" target="_blank">Контакты</a>
+                    <a href="contacts.html" target="_blank">Контакты</a>
                 </td>
                 <td>
-                    <a href="#" target="_blamk">О нас</a>
+                    <a href="aboutus.html" target="_blamk">О нас</a>
                 </td>
                 <td>
-                    <a href="#" target="_blank">Волонтеры</a>
+                    <a href="volunteers.html" target="_blank">Волонтеры</a>
                 </td>
             </tr>
             <table>
