--- a/greencity/index.html
+++ b/greencity/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="stylesheet" href="stylegreencity/style.css">
     <meta charset="UTF-8">
@@ -7,30 +8,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Green_City</title>
 </head>
+
 <body>
     <table class="table-menu">
-            <tr>
-                <td>
-                    <img src="imggreencity/logo.png">
-                </td>
-                <td>
-                    <a href="http://" target="_blank">Главная</a>
-                </td>
-                <td>
-                    <a href="contacts.html" target="_blank">Контакты</a>
-                </td>
-                <td>
-                    <a href="aboutus.html" target="_blamk">О нас</a>
-                </td>
-                <td>
-                    <a href="volunteers.html" target="_blank">Волонтеры</a>
-                </td>
-            </tr>
-            <table>
-                <table class="start">
+        <tr>
+            <td>
+                <img src="imggreencity/logo.png">
+            </td>
+            <td>
+                <a href="http://" target="_blank">Главная</a>
+            </td>
+            <td>
+                <a href="contacts.html" target="_blank">Контакты</a>
+            </td>
+            <td>
+                <a href="aboutus.html" target="_blamk">О нас</a>
+            </td>
+            <td>
+                <a href="volunteers.html" target="_blank">Волонтеры</a>
+            </td>
+        </tr>
+        <table>
+            <table class="start">
                 <tr>
                     <td>
-                     <h1> Стать волонтером проще чем кажется</h1>
+                        <h1> Стать волонтером проще чем кажется</h1>
                     </td>
                 </tr>
                 <tr>
@@ -40,10 +42,27 @@
                 </tr>
                 <tr>
                     <td>
-                        <h3>Форум поможет ответить на все ваши вопросы, вы всегда будете в курсе всех событий из жизни организации. Это главный инструмент коммуникации волонтеров</h3>
+                        <h5>Форум поможет ответить на все ваши вопросы, вы всегда будете в курсе всех событий из жизни
+                            организации. Это главный инструмент коммуникации волонтеров</h5>
                     </td>
-                </tr> 
+                </tr>
             </table>
-    </table>
+        </table>
+        <table class="information">
+            <td>
+                <tr>
+                    <img src="imggreencity/pic-01.png" alt="pic-01">
+                    <h3>Как стать волонтером?</h3>
+                </tr>
+                <tr>
+                    <h5>Прежде всего, необходимо узнать кто такой «волонтер». Это тот кто действует по свободной воле. Сам захотел, и сам выбрал что делать. Ресурс волонтера — его личное время, его личные силы, умения и навыки</h5>
+                </tr>
+            </td>
+            <td>
+                <tr></tr>
+                <tr></tr>
+            </td>
+        </table>
 </body>
+
 </html>
