--- a/greencity/index.html
+++ b/greencity/index.html
@@ -59,8 +59,13 @@
                 </tr>
             </td>
             <td>
-                <tr></tr>
-                <tr></tr>
+                <tr>
+                    <img src="imggreencity/pic-02.png" alt="">
+                    <h3>Выбор организации</h3>
+                </tr>
+                <tr>
+                    <h5>Есть формальные признаки: уставные документы, сайт, команда, описание что и где делают, карта и календарь событий (ложится ли он на Ваш рабочий график), внутренние правила, наличие обучения и поддержки, командная работа</h5>
+                </tr>
             </td>
         </table>
 </body>
