--- a/greencity/index.html
+++ b/greencity/index.html
@@ -53,9 +53,9 @@
                 <td>
                     <img src="imggreencity/pic-01.png" alt="pic-01">
                     <h3>Как стать волонтером?</h3>
+                    <p>Прежде всего, необходимо узнать кто такой «волонтер». Это тот кто действует по свободной воле. Сам захотел, и сам выбрал что делать. Ресурс волонтера — его личное время, его личные силы, умения и навыки</p>
                 </td>
                 <td>
-                    <h5>Прежде всего, необходимо узнать кто такой «волонтер». Это тот кто действует по свободной воле. Сам захотел, и сам выбрал что делать. Ресурс волонтера — его личное время, его личные силы, умения и навыки</h5>
                 </td>
             </tr>
             <tr>
