--- a/greencity/index.html
+++ b/greencity/index.html
@@ -52,7 +52,7 @@
             <tr>
                 <td>
                     <img src="imggreencity/pic-01.png" alt="pic-01">
-                    <h3>Как стать волонтером?</h3>
+                    <h3 style="color: green;">Как стать волонтером?</h3>
                     <p>Прежде всего, необходимо узнать кто такой «волонтер». Это тот кто действует по свободной воле. Сам захотел, и сам выбрал что делать. Ресурс волонтера — его личное время, его личные силы, умения и навыки</p>
                 </td>
                 <td>
@@ -61,10 +61,8 @@
             <tr>
                 <td>
                     <img src="imggreencity/pic-02.png" alt="">
-                    <h3>Выбор организации</h3>
-                </td>
-                <td>
-                    <h5>Есть формальные признаки: уставные документы, сайт, команда, описание что и где делают, карта и календарь событий (ложится ли он на Ваш рабочий график), внутренние правила, наличие обучения и поддержки, командная работа</h5>
+                    <h3 style="color: green;">Выбор организации</h3>
+                    <p>Есть формальные признаки: уставные документы, сайт, команда, описание что и где делают, карта и календарь событий (ложится ли он на Ваш рабочий график), внутренние правила, наличие обучения и поддержки, командная работа</p>
                 </td>
             </tr>
         </table>
