--- a/greencity/index.html
+++ b/greencity/index.html
@@ -60,9 +60,24 @@
             </tr>
             <tr>
                 <td>
-                    <img src="imggreencity/pic-02.png" alt="">
+                    <img src="imggreencity/pic-02.png" alt="pic-02">
                     <h3 style="color: green;">Выбор организации</h3>
                     <p>Есть формальные признаки: уставные документы, сайт, команда, описание что и где делают, карта и календарь событий (ложится ли он на Ваш рабочий график), внутренние правила, наличие обучения и поддержки, командная работа</p>
+                </td>
+            </tr>
+        </table>
+        <table>
+            <tr>
+                <td>
+                    <img src="imggreencity/pic-03.png" alt="pic-03">
+                    <h3>Влонтер помогает только трудом!</h3>
+                    <p>Помните! Волонтерство — это вазимный договор. Вазимное решение и признание прав и обязанностей</p>
+                </td>
+            </tr>
+            <tr>
+                <td><img src="imggreencity/pic-04.png" alt="pic-04">
+                <h3>Готовься задавать вопросы!</h3>
+                <p> Что Вам важно знать? Что вы не нашли на сайте? Что вас смутило? Не забудьте спросить кто и с какими полномочиями над Вами старший? Узнайте что делать в случае возникших проблем</p>
                 </td>
             </tr>
         </table>
