--- a/greencity/index.html
+++ b/greencity/index.html
@@ -48,7 +48,7 @@
                 </tr>
             </table>
         </table>
-        <table class="information">
+        <table class="info">
             <tr>
                 <td>
                     <img src="imggreencity/pic-01.png" alt="pic-01">
@@ -61,27 +61,18 @@
                     <p>Есть формальные признаки: уставные документы, сайт, команда, описание что и где делают, карта и календарь событий (ложится ли он на Ваш рабочий график), внутренние правила, наличие обучения и поддержки, командная работа</p>
                 </td>
             </tr>
+            <td>
+                <img src="imggreencity/pic-03.png" alt="pic-03">
+                <h3>Влонтер помогает только трудом!</h3>
+                <p>Помните! Волонтерство — это вазимный договор. Вазимное решение и признание прав и обязанностей</p>
+            </td>
             <tr>
                 <td>
-                   
+                    <img src="imggreencity/pic-04.png" alt="pic-04">
+                    <h3>Готовься задавать вопросы!</h3>
+                    <p> Что Вам важно знать? Что вы не нашли на сайте? Что вас смутило? Не забудьте спросить кто и с какими полномочиями над Вами старший? Узнайте что делать в случае возникших проблем</p>
                 </td>
             </tr>
-        </table>
-        <table>
-            <tr>
-                <td>
-                    <img src="imggreencity/pic-03.png" alt="pic-03">
-                    <h3>Влонтер помогает только трудом!</h3>
-                    <p>Помните! Волонтерство — это вазимный договор. Вазимное решение и признание прав и обязанностей</p>
-                </td>
-            </tr>
-            <tr>
-                <td><img src="imggreencity/pic-04.png" alt="pic-04">
-                <h3>Готовься задавать вопросы!</h3>
-                <p> Что Вам важно знать? Что вы не нашли на сайте? Что вас смутило? Не забудьте спросить кто и с какими полномочиями над Вами старший? Узнайте что делать в случае возникших проблем</p>
-                </td>
-            </tr>
-        </table>
+        
 </body>
-
 </html>
