--- a/greencity/index.html
+++ b/greencity/index.html
@@ -64,12 +64,12 @@
             <td>
                 <img src="imggreencity/pic-03.png" alt="pic-03">
                 <h3 style="color: green;">Влонтер помогает только трудом!</h3>
-                <p style="color: gray;>Помните! Волонтерство — это вазимный договор. Вазимное решение и признание прав и обязанностей</p>
+                <p>Помните! Волонтерство — это вазимный договор. Вазимное решение и признание прав и обязанностей</p>
             </td>
             <td>
                 <img src="imggreencity/pic-04.png" alt="pic-04">
                 <h3 style="color: green;">Готовься задавать вопросы!</h3>
-                <p style="color: gray;> Что Вам важно знать? Что вы не нашли на сайте? Что вас смутило? Не забудьте спросить кто и с какими полномочиями над Вами старший? Узнайте что делать в случае возникших проблем</p>
+                <p> Что Вам важно знать? Что вы не нашли на сайте? Что вас смутило? Не забудьте спросить кто и с какими полномочиями над Вами старший? Узнайте что делать в случае возникших проблем</p>
             </td>
             </tr>
         
