--- a/greencity/index.html
+++ b/greencity/index.html
@@ -58,9 +58,10 @@
                 <td>
                     <img src="imggreencity/pic-02.png" alt="pic-02">
                     <h3 style="color: green;">Выбор организации</h3>
-                    <p style="color: gray;>Есть формальные признаки: уставные документы, сайт, команда, описание что и где делают, карта и календарь событий (ложится ли он на Ваш рабочий график), внутренние правила, наличие обучения и поддержки, командная работа</p>
+                    <p style="color: gray;">Есть формальные признаки: уставные документы, сайт, команда, описание что и где делают, карта и календарь событий (ложится ли он на Ваш рабочий график), внутренние правила, наличие обучения и поддержки, командная работа</p>
                 </td>
             </tr>
+            <tr>
             <td>
                 <img src="imggreencity/pic-03.png" alt="pic-03">
                 <h3 style="color: green;">Влонтер помогает только трудом!</h3>
