--- a/greencity/index.html
+++ b/greencity/index.html
@@ -8,7 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Green_City</title>
 </head>
-
 <body>
     <table class="table-menu">
         <tr>
@@ -48,7 +47,8 @@
                 </tr>
             </table>
         </table>
-        <table class="info">
+        <table> 
+            <table class="info">
             <tr>
                 <td>
                     <img src="imggreencity/pic-01.png" alt="pic-01">
@@ -73,6 +73,8 @@
                 <p style="color: gray;"> Что Вам важно знать? Что вы не нашли на сайте? Что вас смутило? Не забудьте спросить кто и с какими полномочиями над Вами старший? Узнайте что делать в случае возникших проблем</p>
             </td>
             </tr>
+        </table>
+
         
 </body>
 </html>
