--- a/greencity/index.html
+++ b/greencity/index.html
@@ -47,32 +47,33 @@
                 </tr>
             </table>
         </table>
-        <table> 
+        <table>
             <table class="info">
-            <tr>
+                <tr>
+                    <td>
+                        <img src="imggreencity/pic-01.png" alt="pic-01">
+                        <h3 style="color: green;">Как стать волонтером?</h3>
+                        <p style="color: gray;">Прежде всего, необходимо узнать кто такой «волонтер». Это тот кто действует по свободной воле. Сам захотел, и сам выбрал что делать. Ресурс волонтера — его личное время, его личные силы, умения и навыки</p>
+                    </td>
+                    <td>
+                        <img src="imggreencity/pic-02.png" alt="pic-02">
+                        <h3 style="color: green;">Выбор организации</h3>
+                        <p style="color: gray;">Есть формальные признаки: уставные документы, сайт, команда, описание что и где делают, карта и календарь событий (ложится ли он на Ваш рабочий график), внутренние правила, наличие обучения и поддержки, командная работа</p>
+                    </td>
+                </tr>
+                <tr>
                 <td>
-                    <img src="imggreencity/pic-01.png" alt="pic-01">
-                    <h3 style="color: green;">Как стать волонтером?</h3>
-                    <p style="color: gray;">Прежде всего, необходимо узнать кто такой «волонтер». Это тот кто действует по свободной воле. Сам захотел, и сам выбрал что делать. Ресурс волонтера — его личное время, его личные силы, умения и навыки</p>
+                    <img src="imggreencity/pic-03.png" alt="pic-03">
+                    <h3 style="color: green;">Влонтер помогает только трудом!</h3>
+                    <p style="color: gray;">Помните! Волонтерство — это вазимный договор. Вазимное решение и признание прав и обязанностей</p>
                 </td>
                 <td>
-                    <img src="imggreencity/pic-02.png" alt="pic-02">
-                    <h3 style="color: green;">Выбор организации</h3>
-                    <p style="color: gray;">Есть формальные признаки: уставные документы, сайт, команда, описание что и где делают, карта и календарь событий (ложится ли он на Ваш рабочий график), внутренние правила, наличие обучения и поддержки, командная работа</p>
+                    <img src="imggreencity/pic-04.png" alt="pic-04">
+                    <h3 style="color: green;">Готовься задавать вопросы!</h3>
+                    <p style="color: gray;"> Что Вам важно знать? Что вы не нашли на сайте? Что вас смутило? Не забудьте спросить кто и с какими полномочиями над Вами старший? Узнайте что делать в случае возникших проблем</p>
                 </td>
-            </tr>
-            <tr>
-            <td>
-                <img src="imggreencity/pic-03.png" alt="pic-03">
-                <h3 style="color: green;">Влонтер помогает только трудом!</h3>
-                <p style="color: gray;">Помните! Волонтерство — это вазимный договор. Вазимное решение и признание прав и обязанностей</p>
-            </td>
-            <td>
-                <img src="imggreencity/pic-04.png" alt="pic-04">
-                <h3 style="color: green;">Готовься задавать вопросы!</h3>
-                <p style="color: gray;"> Что Вам важно знать? Что вы не нашли на сайте? Что вас смутило? Не забудьте спросить кто и с какими полномочиями над Вами старший? Узнайте что делать в случае возникших проблем</p>
-            </td>
-            </tr>
+                </tr>
+            </table>
         </table>
 
         
