--- a/greencity/index.html
+++ b/greencity/index.html
@@ -75,7 +75,14 @@
                 </tr>
             </table>
         </table>
-
+<table>
+    <tr>
+        <h3 style="color: green;"> Новости</h3>
+    </tr>
+    <tr>
+        <p style="color: gray;">Вся информация о социальном волонтерстве в России</p>
+    </tr>
+</table>
         
 </body>
 </html>
