--- a/greencity/index.html
+++ b/greencity/index.html
@@ -76,12 +76,14 @@
             </table>
         </table>
 <table>
-    <tr>
-        <h3 style="color: green;"> Новости</h3>
-    </tr>
-    <tr>
-        <p style="color: gray;">Вся информация о социальном волонтерстве в России</p>
-    </tr>
+    <table class="news">
+        <tr>
+            <h3 style="color: green;"> Новости</h3>
+        </tr>
+        <tr>
+            <p style="color: gray;">Вся информация о социальном волонтерстве в России</p>
+        </tr>
+    </table>
 </table>
         
 </body>
