--- a/greencity/index.html
+++ b/greencity/index.html
@@ -73,10 +73,16 @@
                     <p style="color: gray;"> Что Вам важно знать? Что вы не нашли на сайте? Что вас смутило? Не забудьте спросить кто и с какими полномочиями над Вами старший? Узнайте что делать в случае возникших проблем</p>
                 </td>
                 </tr>
+                
             </table>
         </table>
 <table>
     <table class="news">
+        <style>
+            .line {
+                border-bottom: 1px solid;
+            }
+        </style>
         <tr>
             <h3 style="color: green;"> Новости</h3>
         </tr>
