--- a/greencity/index.html
+++ b/greencity/index.html
@@ -91,6 +91,28 @@
         </tr>
     </table>
 </table>
+<table>
+    <td>
+        <tr>
+            Помогаем детям вместе
+        </tr>
+        <tr>
+            <span Дата публикации:></span> 15.11.2020 
+        </tr>
+        <tr>
+            Мы работаем, чтобы менять будущее для детей, а значит, и для всех нас.
+        </tr>
+        <tr>
+            Волонтеры проекта "Зеленый город" так же поддерживают детей в больницах и детских домах, становятся их старшими друзьями и наставниками
+        </tr>
+        <tr>
+            Присоединяйтесь!
+        </tr>
+    </td>
+    <td>
+        <img src="imggreencity/news.png" alt="news.png">
+    </td>
+</table>
         
 </body>
 </html>
