--- a/greencity/index.html
+++ b/greencity/index.html
@@ -91,28 +91,27 @@
         </tr>
     </table>
 </table>
-<table>
-    <td>
-        <tr>
-            Помогаем детям вместе
-        </tr>
-        <tr>
-            <span Дата публикации:></span> 15.11.2020 
-        </tr>
-        <tr>
-            Мы работаем, чтобы менять будущее для детей, а значит, и для всех нас.
-        </tr>
-        <tr>
-            Волонтеры проекта "Зеленый город" так же поддерживают детей в больницах и детских домах, становятся их старшими друзьями и наставниками
-        </tr>
-        <tr>
-            Присоединяйтесь!
-        </tr>
-    </td>
+<table class="help">
     <td>
         <img src="imggreencity/news.png" alt="news.png">
     </td>
-</table>
-        
+    <td>
+        <tr>
+            <h3>Помогаем детям вместе!</h3>
+        </tr>
+        <tr>
+           <h4><span Дата публикации:></span> 15.11.2020</h4> 
+        </tr>
+        <tr>
+            <h5>Мы работаем, чтобы менять будущее для детей, а значит, и для всех нас.</h5>
+        </tr>
+        <tr>
+            <h5>Волонтеры проекта "Зеленый город" так же поддерживают детей в больницах и детских домах, становятся их старшими друзьями и наставниками</h5>
+        </tr>
+        <tr>
+            <h5>Присоединяйтесь!</h5>
+        </tr>
+    </td>
+</table>   
 </body>
 </html>
