--- a/greencity/index.html
+++ b/greencity/index.html
@@ -100,7 +100,7 @@
             <h3>Помогаем детям вместе!</h3>
         </tr>
         <tr>
-           <h4><span Дата публикации:></span> 15.11.2020</h4> 
+           <span><h4>Дата публикации</h4></span> 15.11.2020</h4> 
         </tr>
         <tr>
             <h5>Мы работаем, чтобы менять будущее для детей, а значит, и для всех нас.</h5>
