--- a/greencity/index.html
+++ b/greencity/index.html
@@ -78,11 +78,6 @@
         </table>
 <table>
     <table class="news">
-        <style>
-            .line {
-                border-bottom: 1px solid;
-            }
-        </style>
         <tr>
             <h3 style="color: green;"> Новости</h3>
         </tr>
@@ -92,26 +87,17 @@
     </table>
 </table>
 <table class="help">
-    <td>
-        <img src="imggreencity/news.png" alt="news.png">
-    </td>
-    <td>
-        <tr>
+    <tr>
+        <td>
             <h3>Помогаем детям вместе!</h3>
-        </tr>
-        <tr>
-           <span><h4>Дата публикации</h4></span> 15.11.2020</h4> 
-        </tr>
-        <tr>
+            <span><h4>Дата публикации</h4></span> <h4 style="text-decoration: wavy;">15.11.2020</h4>
             <h5>Мы работаем, чтобы менять будущее для детей, а значит, и для всех нас.</h5>
-        </tr>
-        <tr>
             <h5>Волонтеры проекта "Зеленый город" так же поддерживают детей в больницах и детских домах, становятся их старшими друзьями и наставниками</h5>
-        </tr>
-        <tr>
             <h5>Присоединяйтесь!</h5>
-        </tr>
-    </td>
+        </td>
+        <td>
+            <img src="imggreencity/news.png" alt="news.png">
+        </td>
 </table>   
 </body>
 </html>
