--- a/greencity/index.html
+++ b/greencity/index.html
@@ -89,7 +89,9 @@
 <table class="help">
     <tr>
         <td>
-            <h3>Помогаем детям вместе!</h3>
+            <h3>
+                <p style="color: gray;">Помогаем детям вместе!</p>
+            </h3>
             <span><h4>Дата публикации</h4></span> <h4 style="text-decoration: wavy;">15.11.2020</h4>
             <h5>Мы работаем, чтобы менять будущее для детей, а значит, и для всех нас.</h5>
             <h5>Волонтеры проекта "Зеленый город" так же поддерживают детей в больницах и детских домах, становятся их старшими друзьями и наставниками</h5>
